2005-07-13  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Makefile.am: removed xerces

2005-07-13  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.cpp, src/components/ogre/widgets/JesusEdit.cpp
		* use the new Jesus serializer class

2005-07-13  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/jesus/Jesus.*, src/components/ogre/jesus/Makefile.am, src/components/ogre/jesus/XMLJesusSerializer.*
		* finished The Great Purge of Dissident Xerces Element in the Source
	* configure.ac: 
		* require ogre 1.0.3 and cegui 0.3.0
		* removed xerces

2005-07-13  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Makefile.am, src/components/ogre/widgets/Quit.*, src/components/ogre/widgets/WidgetDefinitions.cpp
		*added a quit widget
	* src/components/ogre/GUIManager.cpp
		* use the quit widget
		* various fixes for CEGUI 0.3.0

2005-07-12  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/environment/GroundCover.*: deleted unused files

2005-07-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/JesusEdit.cpp: removed reference to old scene manager

2005-07-11  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/terrain.cfg
		* terrain settings file for the paging scene manager. it should probably go somewhere better though...
	* media/materials/scripts/environment.material
		* use texture coord 0 but scale the texture

2005-07-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainShader.cpp: use only texture coords 0
	* src/components/ogre/TerrainPage.*
		* removed references to old scene manager
		* added a getPageSize() method
		* various adaptations for the paging scene manager
	* src/components/ogre/TerrainGenerator.*
		* adapted it to use the paging scene manager, generating pages on demand instead of all up front

2005-07-11  Erik Hjortsberg  <erik@katastrof.nu>
